[package]
name = "sprsolve"
version = "0.1.0"
authors = ["Changxi Zheng <cxz@cs.columbia.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
mkl = ["mkl-sys"]
parallel = ["rayon"]   # use rayon for parallel computing

[dependencies]
thiserror = "1.0.20"
num-traits = "0.2.12"
num-complex = "0.3.0"
cauchy = "0.3.0"

sprs = { git = "https://github.com/cxzheng/sprs.git", default-features = false }

mkl-sys = { git = "https://github.com/cxzheng/mkl-sys.git", optional = true }
rayon = { version = "1.4.0", optional = true }

[profile.release]
debug = true    # for performance opt

[dev-dependencies]
approx = "0.3.2"
criterion = { version = "0.3.3", features = ['real_blackbox'] }

[[bench]]
name = "bench_bicg_stab"
harness = false
