[package]
name = "sprsolve"
version = "0.1.4"
authors = ["Changxi Zheng <cxz@cs.columbia.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mkl", "parallel"] 
mkl = ["mkl-sys"]
parallel = ["rayon"]   # use rayon for parallel computing

[dependencies]
thiserror = "1.0.22"
num-traits = "0.2.14"
num-complex = "0.3.1"
cauchy = "0.3.0"

sprs = { git = "https://github.com/cxzheng/sprs.git", default-features = false }

rayon = { version = "1.5.0", optional = true }

[dependencies.mkl-sys]
git = "https://github.com/cxzheng/mkl-sys.git" 
#default-features = false
#features = ["mkl-static-lp64-iomp"]
optional = true

[profile.release]
debug = true    # for performance opt

[dev-dependencies]
approx = "0.4.0"
criterion = { version = "0.3.3", features = ['real_blackbox'] }

[[bench]]
name = "bicgstab"
harness = false

[[bench]]
name = "mat_vec_mul"
harness = false

[[bench]]
name = "mkl_bicgstab"
harness = false
